--- a/app/scss/abstracts/_fonts.scss
+++ b/app/scss/abstracts/_fonts.scss
@@ -1,5 +1,7 @@
 // font-family
-$montreal: ; 
-$trial: ;
+$montreal: 'Comic Neue', cursive; 
+$trial: 'Anaheim', sans-serif;
 
 //font-weights
+$regular: 400;
+$bold: 500;
