Done with the header section

--- a/app/scss/abstracts/_fonts.scss
+++ b/app/scss/abstracts/_fonts.scss
@@ -1,5 +1,5 @@
 // font-family
-$montreal: 'Comic Neue', cursive; 
+$bruno: 'Bruno Ace', sans-serif; 
 $trial: 'Anaheim', sans-serif;
 
 //font-weights
