--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -1,6 +1,6 @@
-@use './base/' as b;
-@use './abstracts/' as a;
-@use './layout/' as l;
-@use './components/' as c;
+@use './base' as b;
+@use './abstracts' as a;
+@use './layout' as l;
+@use './components' as c;
 
-// @import url('https://fonts.googleapis.com/css2?family=Anaheim&family=Comic+Neue:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anaheim&family=Bruno+Ace&display=swap');
