hero title done

--- a/app/scss/abstracts/_fonts.scss
+++ b/app/scss/abstracts/_fonts.scss
@@ -1,6 +1,6 @@
 // font-family
 $bruno: 'Bruno Ace', sans-serif; 
-$trial: 'Anaheim', sans-serif;
+$abz: 'ABeeZee', sans-serif;
 
 //font-weights
 $regular: 400;
