--- a/app/scss/base/_reset.scss
+++ b/app/scss/base/_reset.scss
@@ -20,7 +20,7 @@ a, a:hover, a:active {
 
 body {
    font-size: 16px; 
-   font-family: a.$trial;
+   font-family: a.$abz;
    font-weight: a.$regular;
    line-height: normal;
    width: 90%;
