--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -3,4 +3,4 @@
 @use './layout' as l;
 @use './components' as c;
 
-@import url('https://fonts.googleapis.com/css2?family=Anaheim&family=Bruno+Ace&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=ABeeZee:ital@1&family=Bruno+Ace&display=swap');
