--- a/app/scss/abstracts/_colors.scss
+++ b/app/scss/abstracts/_colors.scss
@@ -1,4 +1,4 @@
 $primary-color: hsl(209,100%,45%);
 $secondary-color: hsl(0,0%,12%);
 $white: hsl(0,0%,100%);
-$grey: 	hsl(0,0%,53%);
+$grey: 	 	hsl(260, 18%, 97%)
