--- a/app/scss/layout/_hero.scss
+++ b/app/scss/layout/_hero.scss
@@ -1,10 +1,36 @@
+@use '../abstracts' as a;
+
 .hero{
 
     &__title {
         text-align: center;
-        margin: 0 auto;
+        margin: 0 auto 50px;
         width: 349px;
         font-size: 2.5rem;
         font-style: italic;
     }
+
+    &__background {
+        background-color: a.$grey;
+        height: 450px;
+    }
+
+    &-image__background {
+        position: relative;
+        height: 450px;
+        margin: auto auto;
+        width: 800px;
+    }
+
+    &__image {
+        width: 500px;
+        height: 400px;
+        position: absolute;
+    }
+
+    &__image:last-child {
+        right: 10px;
+        top: 40px;
+    }
+
 }
