first part of prompt done

--- a/app/scss/layout/_about.scss
+++ b/app/scss/layout/_about.scss
@@ -2,7 +2,7 @@
 @use '../utilities' as *;
 
 .about-us {
-
+    margin-bottom: 150px;
     &__title {
         width: 400px;
         font-size: 2.2rem;
