--- a/app/scss/layout/_header.scss
+++ b/app/scss/layout/_header.scss
@@ -1,6 +1,6 @@
-@use '../abstracts/index' as a;
+@use '../abstracts' as a;
 @use '../components' as c;
-
+@use '../utilities/' as *;
 
 
 .header {
@@ -17,12 +17,7 @@
     }
 
     &__logo {
-        margin: 0 auto;
-        color: a.$primary-color;
-        font-family: a.$bruno;
-        width: 205px;
-        font-size: 1.55rem;
-        text-transform: uppercase;    
+        @include logo(a.$primary-color);
     }
 
     &__btn {
