--- a/app/scss/layout/_prompt.scss
+++ b/app/scss/layout/_prompt.scss
@@ -6,7 +6,7 @@
 
     &__description {
         width: 95%;
-        margin: 0 auto;
+        margin: 0 auto 50px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -23,5 +23,85 @@
     &__btn {
         @include c.btn;
         
+    }
+
+    &__images {
+        display: grid;
+        grid-template: 2fr 1fr / 1fr 2fr;
+        height: 680px;
+        gap: 15px;
+    }
+
+    &__iphone {
+        grid-area: 1 / 1 / 3 / 2;
+    }
+
+    &__iphone-15.iphone {
+      margin: 64px auto;
+    }
+
+    &__iphone.bg-grey {
+        padding: 0 15px;
+    }
+
+    &__three-iphones {
+        grid-area: 1 / 2 / 2 / 3 ;
+
+        padding: 0 15px;
+    }
+
+    &__creatives {
+        grid-area: 2 / 2 / 3 / 3;
+        height: 250px;
+
+        
+        background: url(/images/Rectangle\ 362.png) no-repeat ;
+        background-size: cover;
+        background-position: center;
+    }  
+
+    
+    &__iphones-container {
+        position: relative;
+        width: 600px;
+        margin: 0 auto;
+        height: 100%;
+    }
+
+    .iphones {
+        position: absolute;
+    }
+
+    .iphones:last-child{
+        bottom: 0;
+        right: 0;
+    }
+
+    .iphones:first-child{
+        left: 0;
+        bottom: 0;
+    }
+
+    .iphones:nth-child(2) {
+        right: 0;
+    }
+
+    &__logo {
+        @include logo(a.$white) {
+            margin: 103.5px auto;
+            font-size: 2.2rem;
+            width: 350px
+        };
+    }
+
+    .infinity-logo-w {
+        display: inline-block;
+        width: 100px;
+        height: 43px;
+
+        > img {
+            width: 100%;
+            height: 35px;
+        }
     }
 }
